gcc/testsuite/g++.dg/other/main2.C
float main();  // { dg-error "1:.::main. must return .int." }
